src/test/contracts/negative/duplicate_record_field.mligo
type r = { foo : int ; foo : int }

let main (_p, _s : r * unit) : operation list * unit =
  (([] : operation list), ())
